@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.6.10) unstable; urgency=low
 
   * parser: finish tag before bailing out
+  * http-request: allow URLs without path component
 
  --
 
